- libgwyapp: New simplified logging functions that do not require passing the
  function name.
- libgwyprocess: New function for numbering grains assuming the mask is
  periodic and grains can touch across the opposite edges.
- libgwyapp: New functions for help handling.
- libgwydgets: Real scale in 3D view can be set arbitrarily, not just 1:1.
- libgwyapp: New file module utility function for masking NaNs and infs.

Modules:
- OpenGPS (new): Imports OpenGPS surface data format (ISO 5436-2).
- JEOL JSPM (new): Imports JEOL JSPM data files.
- Diffusion synthesis (new): Artificial surface generation by a diffussion
  limited aggregation simulation.
- K-means (new): K-means clustering for volume data.
- FITS (new): Imports Fleximple Image Transport System images.
- Filters tool: Gaussian smoothing is no longer limited to integer FWHM.
- Columnar synthesis: Can plot the evolution of some statistics during the
  growth.
- APE DAX: Warning about invalid logging function name was fixed.
- NT-MDT: fixed loading of old spectroscopy from Nanoeducator2 data.
- Pygwy: It is possible to write volume data processing modules in Python.
  Brick has a duplicate() method, gwy_app_data_browser_get_current() supports
  brick-related items.  Python error messages are no longer silenced after
  Python modules are run.
- Color range tool: The range can be set to the range of masked/unmasked
  values.
- HDR image: NaNs and infinites in floating point images are removed and
  masked upon import.


2.37 (2014-06-27)
Application:
- Translations updated: Czech, French, Italian, Russian.

Libraries:
- libgwyprocess: A function for filling grain voids was added.
- libgwyprocess: A simple x and y derivative filter function was added.
- libgwyprocess: A regional extrema marking function was added.
- libgwyprocess: A classic Vincent watershed algorithm function was added.
- libgwydgets: Several new stock icons were added.
- libgwyprocess: Pixel count was added as a new grain quantity.